--- a/mario/gomev2.html
+++ b/mario/gomev2.html
@@ -25,7 +25,7 @@
     const blockImg = new Image();  blockImg.src = "icon2.jpg?" + timestamp;
     const enemyImg = new Image();  enemyImg.src = "icon3.jpg?" + timestamp;
     // ★追加：ボスの画像★
-
+    const bossImg = new Image();   bossImg.src = "icon4.jpg?" + timestamp;
 
     // --- ゲーム設定 ---
     let gameState = "playing";
@@ -239,4 +239,5 @@
 </script>
 </body>
 </html>
+
 
